Add config for release, Closes #3

--- a/pom.xml
+++ b/pom.xml
@@ -39,5 +39,10 @@
             </plugin>
         </plugins>
     </build>
-
+    <scm>
+        <developerConnection>
+            scm:git:github@github.com:SzoBa/sb-pet-clinic.git
+        </developerConnection>
+        <tag>HEAD</tag>
+    </scm>
 </project>
