--- a/pom.xml
+++ b/pom.xml
@@ -14,7 +14,7 @@
     </parent>
     <groupId>com.springpractice</groupId>
     <artifactId>sb-pet-clinic</artifactId>
-    <version>0.0.1</version>
+    <version>0.0.1-SNAPSHOT</version>
     <name>sb-pet-clinic</name>
     <description>Demo project for Spring Boot</description>
     <properties>
