--- a/pet-clinic-web/src/main/resources/application.yml
+++ b/pet-clinic-web/src/main/resources/application.yml
@@ -2,6 +2,14 @@ spring:
   profiles:
     active:
       - prod
+      - datajpa
+  h2:
+    console:
+      enabled: true
+  datasource:
+    url: jdbc:h2:mem:testdb
+  jpa:
+    defer-datasource-initialization: true
 ---
 spring:
   profiles:
