Upgrade to Java 17

--- a/pet-clinic-web/src/main/resources/application.yml
+++ b/pet-clinic-web/src/main/resources/application.yml
@@ -12,10 +12,12 @@ spring:
     defer-datasource-initialization: true
 ---
 spring:
-  profiles:
-  - prod
-  - uat
-  - dev
+  config:
+    activate:
+      on-profile:
+        - prod
+        - uat
+        - dev
 prod:
   username: YmlProdUserName
   password: YmlProdPassword
